--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">test-application-compose</string>
+    <string name="hello_world">Hello, world!</string>
+    <string name="from">Valentin</string>
 </resources>
